--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/main/server.js",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/main/server.ts"
   },
   "repository": {
